
NOV 1, 2011:
EasyPBI version 0.3 was released!

DEC 2, 2011:
EasyPBI version 1.0 was released!
Changes include: ability to build PBI's directly from the EasyPBI interface, numerous bugixes and interface improvements.

DEC 12, 2011:
Jesse Smith transferred ownership of EasyPBI and PBIMaker (formerly Make-A-PBI) to the PC-BSD Project.
Ken Moore (from the PC-BSD project) takes over full development of EasyPBI.

MAR 20, 2012:
EasyPBI was added to the default PC-BSD system for the upcoming PC-BSD 9.1 Beta releases.
SVN location: svn://svn.pcbsd.org/pcbsd/current/src-qt4/EasyPBI

~MAR 28, 2012:
EasyPBI version 1.2 is tagged in SVN!
Changes include: New backend to replace the old "Make-A-PBI" code, new PBI module editing functionality, ability to use TMPFS when building PBI's, numerous bugfixes.

JUN 20, 2012:
EasyPBI version 1.3 is tagged in SVN!
Changes include: New ability to use package caching when building PBI's, ability to read FreeBSD OptionsNG formatting, numerous critical bugfixes to the port-reading and module-editing backend.

JAN 10, 2013:
EasyPBI version 2.0 is released!
This version includes a complete re-write of the program, with a newly streamlined UI and many functionality improvements.
Special Thanks to Jennifer Rosenburg for the new logo and icons!
New features: Packaging a local directory as a PBI, allow building 32-bit PBI's on a 64-bit system, advanced scripting support for PBI modules, complete XDG desktop/menu/mime support for modules, and switch to full optionsNG for PBI build options.

APR 24, 2013:
EasyPBI version 2.1 is tagged!
Changes include: Combine the FreeBSD ports dialog into the EasyPBI Settings dialog, use portsnap for all FreeBSD ports fetching and updating, added the ability to flag xdg entries as requiring root, make all the "save" buttons dynamically enabled as appropriate. 