@@ -16,7 +16,6 @@
 #include <QTreeWidget>
 #include <QTreeWidgetItem>
 
-#include "modBuild.h"
 #include "backend.h"
 #include "config.h"
 #include "PBIModule.h"
@@ -35,6 +34,7 @@ public:
     explicit MainGUI(QWidget *parent = 0);
     ~MainGUI();
 
+    void loadModule(QString confFile);
 
 private slots:
     //general purpose functions
@@ -101,20 +101,18 @@ private slots:
 
 private:
     Ui::MainGUI *ui;
-    //ModBuild *currentModule;
     PBIModule MODULE;
     Config *settings;
     QLineEdit *line_module;
-    //QRadioButton *radio_module_port, *radio_module_local;
     QMenu menu_elOpts, menu_validMenuCats, menu_validRepoCats, menu_validRepoTypes;
     bool XDGUPDATING;
+    QString lastModuleDir;
 
     QString PBI_BUILDING_NOW;
     bool PBI_BUILD_TERMINATED;
     QProcess *p;
 
     void SetupDefaults();
-    //bool isValidPort(QString, bool allowOverride = FALSE);
     void checkMime();
 
 };
